--- a/app/package.json
+++ b/app/package.json
@@ -7,11 +7,12 @@
     },
     "dependencies": {
         "@tok/generation": "*",
+        "@tok/i18n": "^0.0.0",
         "vue": "^3.3.4",
         "vue-router": "^4.2.5"
     },
     "devDependencies": {
-        "@tok/tsconfig": "*",
-        "@tok/eslint-config": "*"
+        "@tok/eslint-config": "*",
+        "@tok/tsconfig": "*"
     }
 }
